# hikari-tsukino-bot

./: .env.example  .gitignore  BUILD_MEMORY.md  CHARACTER.md  CHARACTER_BUILD.md  CLAUDE.md  HUMANIZING.md  HUMANIZING_2.md  README.md  ROADMAP.md  pyproject.toml  settings.yaml
bot/: chat.py  consolidate.py  handlers.py  heartbeat.py  llm.py  main.py  memory.py  photo.py  reflect.py
character/: AGENTS.md  APPEARANCE.md  HEARTBEAT_TEMPLATE.md  IDENTITY.md  LORE.md  SOUL.md
data/: HEARTBEAT.md.example  MEMORY.md.example  THOUGHTS.md.example  USER.md.example
tests/: test_character.py  test_heartbeat.py  test_ignore.py  test_memory.py
